<resources>
    <string name="app_name">timer</string>
    <string name="plus_btn" />
    <string name="timer">1:00:00</string>
    <string name="minus_btn" />
    <string name="reset_btn" />
    <string name="start_btn" />
    <string name="next_btn">Pause time</string>
    <string name="popUp_btn">Pause time</string>
    <string name="back_btn">Back</string>
    <string name="pause">15:00</string>
</resources>
